fix about corner none on small screen

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -282,6 +282,9 @@
   .about__corner {
     display: none;
   }
+  .about__wrapper::before {
+    display: none;
+  }
 
   .about__desc_desk {
     display: none;
